# bluetooth_low_energy

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  messages.proto  pigeon.dart  pubspec.yaml
.github/workflows/: close_inactive_issues.yml  publish_bluetooth_low_energy.yml  publish_bluetooth_low_energy_android.yml  publish_bluetooth_low_energy_darwin.yml  publish_bluetooth_low_energy_linux.yml  publish_bluetooth_low_energy_platform_interface.yml  publish_bluetooth_low_energy_windows.yml
android/: build.gradle
bluetooth_low_energy/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
bluetooth_low_energy/android/: settings.gradle
bluetooth_low_energy/example/: .metadata  pubspec.yaml
bluetooth_low_energy/lib/: bluetooth_low_energy.dart  bluetooth_low_energy_method_channel.dart  bluetooth_low_energy_platform_interface.dart
bluetooth_low_energy/linux/: CMakeLists.txt  bluetooth_low_energy_plugin.cc  bluetooth_low_energy_plugin_private.h
bluetooth_low_energy/macos/: bluetooth_low_energy.podspec
bluetooth_low_energy/test/: bluetooth_low_energy_method_channel_test.dart  bluetooth_low_energy_test.dart
bluetooth_low_energy/windows/: CMakeLists.txt  bluetooth_low_energy_plugin.cpp  bluetooth_low_energy_plugin.h  bluetooth_low_energy_plugin_c_api.cpp
bluetooth_low_energy_android/: .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  api.dart  api.proto  jnigen.yaml  my_api.dart  my_channels.dart  pigeon.dart  pubspec.yaml
bluetooth_low_energy_android/android/: build.gradle  settings.gradle
bluetooth_low_energy_android/example/: README.md  pubspec.yaml
bluetooth_low_energy_android/lib/: bluetooth_low_energy_android.dart  bluetooth_low_energy_android_method_channel.dart  bluetooth_low_energy_android_platform_interface.dart
bluetooth_low_energy_android/test/: bluetooth_low_energy_android_method_channel_test.dart  bluetooth_low_energy_android_test.dart
bluetooth_low_energy_core/: README.md  api.dart  pubspec.yaml
bluetooth_low_energy_core/example/: README.md  pubspec.yaml
bluetooth_low_energy_core/lib/: bluetooth_low_energy_core.dart  bluetooth_low_energy_core_method_channel.dart  bluetooth_low_energy_core_platform_interface.dart
bluetooth_low_energy_core/test/: bluetooth_low_energy_core_method_channel_test.dart  bluetooth_low_energy_core_test.dart
bluetooth_low_energy_darwin/: .metadata  CHANGELOG.md  README.md  api.dart  my_api.dart  pigeon.dart  pubspec.yaml
bluetooth_low_energy_darwin/darwin/: bluetooth_low_energy.podspec  bluetooth_low_energy_darwin.podspec
bluetooth_low_energy_darwin/example/: README.md  pubspec.yaml
bluetooth_low_energy_darwin/ios/: bluetooth_low_energy_darwin.podspec
bluetooth_low_energy_darwin/lib/: bluetooth_low_energy_darwin.dart
bluetooth_low_energy_darwin/macos/: bluetooth_low_energy_darwin.podspec
bluetooth_low_energy_darwin/test/: bluetooth_low_energy_darwin_method_channel_test.dart  bluetooth_low_energy_darwin_test.dart
bluetooth_low_energy_ios/: .metadata  CHANGELOG.md  LICENSE  README.md  my_api.dart  pubspec.yaml
bluetooth_low_energy_ios/example/: README.md  pubspec.yaml
bluetooth_low_energy_ios/ios/: bluetooth_low_energy.podspec  bluetooth_low_energy_ios.podspec
bluetooth_low_energy_ios/lib/: bluetooth_low_energy_ios.dart  bluetooth_low_energy_ios_method_channel.dart  bluetooth_low_energy_ios_platform_interface.dart
bluetooth_low_energy_ios/test/: bluetooth_low_energy_ios_method_channel_test.dart  bluetooth_low_energy_ios_test.dart
bluetooth_low_energy_linux/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
bluetooth_low_energy_linux/example/: README.md  pubspec.yaml
bluetooth_low_energy_linux/lib/: bluetooth_low_energy_linux.dart  bluetooth_low_energy_linux_method_channel.dart  bluetooth_low_energy_linux_platform_interface.dart
bluetooth_low_energy_linux/linux/: CMakeLists.txt  bluetooth_low_energy_linux_plugin.cc  bluetooth_low_energy_linux_plugin_private.h
bluetooth_low_energy_linux/test/: bluetooth_low_energy_linux_test.dart  (+1 more)
bluetooth_low_energy_macos/: .metadata  README.md  my_api.dart  pubspec.yaml
bluetooth_low_energy_platform_interface/: .flutter-plugins  .flutter-plugins-dependencies  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
bluetooth_low_energy_windows/: .metadata  CHANGELOG.md  README.md  api.dart  my_api.dart  pubspec.yaml
bluetooth_low_energy_windows/windows/: CMakeLists.txt  bluetooth_low_energy_api.g.cpp  bluetooth_low_energy_api.g.h  bluetooth_low_energy_exception.cpp  bluetooth_low_energy_exception.h  bluetooth_low_energy_format.cpp  bluetooth_low_energy_format.h  bluetooth_low_energy_windows.cpp  bluetooth_low_energy_windows.h  bluetooth_low_energy_windows_c_api.cpp  bluetooth_low_energy_windows_plugin.cpp  bluetooth_low_energy_windows_plugin.h  bluetooth_low_energy_windows_plugin_c_api.cpp  central_manager_impl.cpp  central_manager_impl.h  my_api.g.cpp  my_api.g.h  my_central_manager.cpp  my_central_manager.h  my_exception.cpp  my_exception.h  my_format.cpp  my_format.h  my_peripheral_manager.cpp  my_peripheral_manager.h  peripheral_manager_impl.cpp  peripheral_manager_impl.h
bluetooth_low_energy_windows/windows/include/bluetooth_low_energy/: bluetooth_low_energy_plugin_c_api.h
bluetooth_low_energy_windows/windows/include/bluetooth_low_energy_windows/: bluetooth_low_energy_windows_c_api.h  bluetooth_low_energy_windows_plugin_c_api.h
bluetooth_low_energy_windows/windows/test/: bluetooth_low_energy_windows_plugin_test.cpp  bluetooth_low_energy_windows_test.cpp
example/: README.md  pubspec.yaml
ios/: bluetooth_low_energy.podspec
lib/: bluetooth_low_energy.dart
linux/: CMakeLists.txt  bluetooth_low_energy_plugin.cc
pigeon/: api.dart  messages.dart
proto/: message.proto  messages.proto
scripts/: build_android_api.ps1  publish.sh  release.sh  run_pigeon.ps1  run_pigeon.sh  run_protoc.sh
test/: bluetooth_low_energy_test.dart
windows/: CMakeLists.txt  bluetooth_low_energy_plugin.h
(+1038 files in other folders)
